# compound-wiki

./: .gitignore  INSTALL.md  LICENSE  README.en.md  README.md  _run_e2e.sh  _run_e2e_v3.sh  _test_e2e_simple.py  pyproject.toml  requirements.txt  ruff.toml  run_e2e.sh  test_e2e.py  test_e2e_v2.py  test_install.py
.github/workflows/: ci.yml
auto/: __init__.py  agent.py  cam-auto.bat  cam-auto.sh  collector.py  config.json  config.py  cw-auto.bat  cw-auto.sh  pipeline.py  scheduler.py  state.py  watcher.py
cam/: __init__.py  cli.py  cli_daemon.py
cam_core/: __init__.py  config.py  deduplicator.py  extractor.py  mcp_server.py  memory_graph.py  shared_wiki.py
cam_daemon/: __init__.py  _run.py  client.py  config.py  daemon.py  scheduler.py  server.py
compound_wiki/: __init__.py  cli.py
cw_daemon/: _run.py  daemon.py
examples/raw-sample/: compound-memory-three-layer.md  llm-wiki-karpathy.md
memory_core/: __init__.py  agent_sdk.py  config.py  deduplicator.py  extractor.py  hook_engine.py  mcp_server.py  memory_graph.py  shared_wiki.py
memory_core/examples/: e2e_simple.py  openclaw_e2e.py  openclaw_integration.py  quick_start.py
plugins/: __init__.py  base.py  config.json  mcp_server.py
plugins/adapters/: __init__.py  base.py  logseq.py  obsidian.py  web_ui.py
plugins/browser-extension/: ARCHITECTURE.md  README.md  background.js  content.js  manifest.json
plugins/browser-extension/lib/: readability.js  scorer.js
plugins/browser-extension/popup/: popup.html  popup.js
plugins/openclaw/: index.ts  openclaw.plugin.json  package.json
plugins/sources/: __init__.py  api_source.py  base.py  bot_discord.py  bot_telegram.py  browser.py  clipboard.py  email_source.py  file_watch.py  rss_source.py  webhook_source.py
schema/: CLAUDE.md  PERSPECTIVE.example.md
schema/templates/: concept.md  entity.md  synthesis.md
scripts/: cam.bat  cam.sh  cam_tool.py  cw.bat  cw.sh  cw_tool.py
wiki/: changelog.md  index.md
wiki/concept/: postgresql-query-optimizer-handles-complex-6bd39a4a.md
wiki/entity/: claude-code擅长大型重构和多文件理解-cursor实时补全准确率92-copilot-workspace与github集成最深-91614e53.md  gpt-5-arc-agi达78-接近人类-4c519ffc.md  langchain最成熟支持100-集成-crewai多agent协作效率高40-autogen-v0-03301ac7.md  prefers-relational-databases-f3871500.md  using-docker-7fc8fa6f.md  using-github-actions-f794442f.md  using-postgresql-afbedde0.md  using-tdd-9e9d43c7.md
wiki/synthesis/: chose-postgresql-for-project-db-45d663ce.md  user-chose-postgresql-for-the-e9c5459a.md  using-drizzle-76022716.md
